# rowperm

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  release_checklist.md  release_steps.md  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  build_issue.md
.github/workflows/: build_wheels.yml  test.yml
scripts/: benchmark_row_permutation.py  profile_model_impact.py  run_triton_profile.py
tests/: __init__.py  test_correctness.py  test_speed.py  test_triton.py
tools/: profile_impact.py
torch_rowperm/: __init__.py  core.py
torch_rowperm/_cuda/: __init__.py  row_perm.cpp  row_perm.cu
torch_rowperm/_triton/: __init__.py  row_perm.py
