[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "torch>=2.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "torch_rowperm"
version = "0.1.0"
description = "Fast row permutation operations for PyTorch tensors"
readme = "README.md"
authors = [
    {name = "rowperm developers", email = "rowperm@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]
triton = [
    "triton>=2.0.0",
]
all = [
    "triton>=2.0.0",
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/mrcha033/rowperm"
"Bug Tracker" = "https://github.com/mrcha033/rowperm/issues"

[tool.setuptools]
packages = ["rowperm"]

[tool.setuptools.package-data]
torch_rowperm = ["*.so", "*.pyd"]

[tool.cibuildwheel]
build = "cp3*-manylinux_x86_64"
skip = "*-musllinux*"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.environment]
TORCH_CUDA_ARCH_LIST = "8.0;8.6;8.9;9.0+PTX"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 